--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
+
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCu5m1cJhGcQMjqlnLgqPZFK_b6dSdnViw",
+    authDomain: "c34-car-ecf1a.firebaseapp.com",
+    databaseURL: "https://c34-car-ecf1a.firebaseio.com",
+    projectId: "c34-car-ecf1a",
+    storageBucket: "c34-car-ecf1a.appspot.com",
+    messagingSenderId: "119432180175",
+    appId: "1:119432180175:web:56288faf870e2d9a0362ba"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
   </head>
   <body>
